# quantus-wasm

./: .gitignore  CREATE_RELEASE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  publish.yml
examples/: usage.js  wallet.mjs
js/: index.ts
scripts/: create-release.sh  sync-cargo-version.mjs
src/: ext.rs  lib.rs  mnemonic.rs
test/: smoke.test.js
